# lux

./: .gdbinit.in  .gitignore  CMakeLists.txt  CMakePresets.json  flake.nix  justfile
src/: kernel.c  types.h
src/arch/: CMakeLists.txt
src/arch/riscv64/: arch.h  boot.S  entry.S  linker.ld  registers.h
src/drivers/: uart.c  uart.h
src/memory/: page_allocator.c  page_allocator.h
