set(CURRENT_ARCH_DIR "${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_SYSTEM_PROCESSOR}")

file(GLOB ARCH_SOURCES CONFIGURE_DEPENDS "${CURRENT_ARCH_DIR}/*.c" "${CURRENT_ARCH_DIR}/*.S")

add_library(arch_backend STATIC ${ARCH_SOURCES})
target_include_directories(arch_backend PUBLIC ${CURRENT_ARCH_DIR})

set(ARCH_LINKER_SCRIPT "${CURRENT_ARCH_DIR}/linker.ld" PARENT_SCOPE)
